--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,34 @@
+body {
+  font-family: "Google Sans", arial, sans-serif;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #cccfd0;
+  border-radius: 10px;
+}
+
 h1 {
-  color: blueviolet;
+  margin-bottom: 0;
+  color: #4d4e51;
+  display: block;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: rgb(112, 117, 122);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
 }
