--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,6 @@
 body {
   font-family: "Google Sans", arial, sans-serif;
 }
-.weather-app-wrapper {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 1px solid #cccfd0;
-  border-radius: 10px;
-}
 
 h1 {
   margin-bottom: 0;
@@ -31,4 +24,44 @@ li {
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
+}
+
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  padding: 20px;
+  border: 1px solid #cccfd0;
+  border-radius: 10px;
+}
+
+.overview {
+  margin-bottom: 20px;
+}
+
+.weather-temperature img {
+  margin-right: 5px;
+  height: 60px;
+  width: 60px;
+  margin-top: unset;
+  vertical-align: top;
+}
+
+.weather-temperature strong {
+  color: #202124;
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -32px;
+}
+
+.weather-temperature .fahrenhight {
+  text-decoration: none;
 }
