--- a/src/style.css
+++ b/src/style.css
@@ -18,13 +18,17 @@ ul {
 
 li {
   list-style: none;
-  text-transform: capitalize;
+
   margin: 0;
   padding: 0;
   color: rgb(112, 117, 122);
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
+}
+
+li:first-letter {
+  text-transform: capitalize;
 }
 
 .weather-app-wrapper {
