--- a/src/style.css
+++ b/src/style.css
@@ -67,18 +67,18 @@ li:first-letter {
   top: -32px;
 }
 
-.weather-temperature .fahrenhight {
+.weather-temperature a {
   text-decoration: none;
 }
 
 .weather-temperature .active {
   color: #202124;
-  text-decoration: none;
+
   cursor: default;
 }
 
 .weather-temperature .active:hover {
   color: #202124;
-  text-decoration: none;
+
   cursor: default;
 }
