--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,23 @@ li:first-letter {
 
 .weather-temperature .active:hover {
   color: #202124;
-
   cursor: default;
+}
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  color: #202124;
+}
+
+.weather-forecast-temperature {
+  font-size: 13px;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.6;
 }
